# mcp-client

./: AUTOCLONE-PROOF.txt  RDE-18-MARKER.txt  client.py  pyproject.toml
