[tool.poetry]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
packages = []

[tool.poetry.dependencies]
python = ">=3.11"
anthropic = ">=0.49.0"
mcp = ">=1.3.0"
python-dotenv = ">=1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
